--- a/xdows安全/css/public.css
+++ b/xdows安全/css/public.css
@@ -2,7 +2,7 @@
     padding: 0;
     margin: 0;
     /* font-family: 'Microsoft YaHei' */
-    font-family: "Helvetica Neue", Helvetica, Arial, "Microsoft Yahei", "Hiragino Sans GB", "Heiti SC", "WenQuanYi Micro Hei", sans-serif
+    font-family: '华康方圆体W7',"Helvetica Neue", Helvetica, Arial, "Microsoft Yahei", "Hiragino Sans GB", "Heiti SC", "WenQuanYi Micro Hei", sans-serif
 }
 
 html,
