--- a/xdows安全/css/download.css
+++ b/xdows安全/css/download.css
@@ -24,17 +24,17 @@ body {
 }
 
 .down-ietm.windows.hover {
-    background: url(../img/01.png) no-repeat center 0;
+    background: url(//qd.myapp.com/myapp/qqteam/TIM_WEB/img/TIM_PC/01.png) no-repeat center 0;
     background-size: cover
 }
 
 .down-ietm.iphone.hover {
-    background: url(../img/02.png) no-repeat center 0;
+    background: url(//qd.myapp.com/myapp/qqteam/TIM_WEB/img/TIM_PC/02.png) no-repeat center 0;
     background-size: cover
 }
 
 .down-ietm.android.hover {
-    background: url(../img/03.png) no-repeat center 0;
+    background: url(//qd.myapp.com/myapp/qqteam/TIM_WEB/img/TIM_PC/03.png) no-repeat center 0;
     background-size: cover
 }
 
@@ -57,32 +57,32 @@ body {
 }
 
 .windows .itemlogo {
-    background: url(../img/windows.png) no-repeat center 80px;
+    background: url(//qd.myapp.com/myapp/qqteam/TIM_WEB/img/TIM_PC/windows.png) no-repeat center 80px;
     background-size: auto 114px;
 }
 
 .iphone .itemlogo {
-    background: url(../img/iphone.png) no-repeat center 80px;
+    background: url(//qd.myapp.com/myapp/qqteam/TIM_WEB/img/TIM_PC/iphone.png) no-repeat center 80px;
     background-size: auto 114px;
 }
 
 .android .itemlogo {
-    background: url(../img/android.png) no-repeat center 80px;
+    background: url(//qd.myapp.com/myapp/qqteam/TIM_WEB/img/TIM_PC/android.png) no-repeat center 80px;
     background-size: auto 114px;
 }
 
 .windows.hover .itemlogo {
-    background: url(../img/windows-hover.png) no-repeat center 80px;
+    background: url(//qd.myapp.com/myapp/qqteam/TIM_WEB/img/TIM_PC/windows-hover.png) no-repeat center 80px;
     background-size: auto 114px;
 }
 
 .iphone.hover .itemlogo {
-    background: url(../img/iphone-hover2x.png) no-repeat center 80px;
+    background: url(//qd.myapp.com/myapp/qqteam/TIM_WEB/img/TIM_PC/iphone-hover2x.png) no-repeat center 80px;
     background-size: auto 114px;
 }
 
 .android.hover .itemlogo {
-    background: url(../img/android-hover2x.png) no-repeat center 80px;
+    background: url(//qd.myapp.com/myapp/qqteam/TIM_WEB/img/TIM_PC/android-hover2x.png) no-repeat center 80px;
     background-size: auto 114px;
 }
 
@@ -171,12 +171,29 @@ body {
     text-decoration: underline
 }
 
+.macqq {
+    font-size: 20px;
+    color: #333;
+    text-align: center;
+    padding-top: 54px;
+    padding-bottom: 62px;
+    line-height: 50px;
+}
+
+.macqq a {
+    color: #0188fb
+}
+
+.macqq a:hover {
+    text-decoration: underline
+}
 
 .down-ietm:hover {
     -moz-box-shadow: 0px 8px 25px rgba(0, 0, 0, 0.12);
     -webkit-box-shadow: 0px 8px 25px rgba(0, 0, 0, 0.12);
     box-shadow: 0px 8px 25px rgba(0, 0, 0, 0.12);
 }
+
 
 /* .footer.d-page {
     position: fixed;
@@ -244,12 +261,12 @@ body {
 
 @media screen and (resolution: 2dppx) {
     .iphone.hover .itemlogo {
-        background: url(../img/iphone-hover2x.png) no-repeat center 80px;
+        background: url(//qd.myapp.com/myapp/qqteam/TIM_WEB/img/TIM_PC/iphone-hover2x.png) no-repeat center 80px;
         background-size: auto 140px;
         height: 140px;
     }
     .android.hover .itemlogo {
-        background: url(../img/android-hover2x.png) no-repeat center 80px;
+        background: url(//qd.myapp.com/myapp/qqteam/TIM_WEB/img/TIM_PC/android-hover2x.png) no-repeat center 80px;
         background-size: auto 140px;
         height: 140px
     }
@@ -260,27 +277,27 @@ body {
         transform: scale(0.9, 0.9)
     }
     .windows .itemlogo {
-        background: url(../img/windows.png) no-repeat center 60px;
+        background: url(//qd.myapp.com/myapp/qqteam/TIM_WEB/img/TIM_PC/windows.png) no-repeat center 60px;
         background-size: auto 100px;
     }
     .iphone .itemlogo {
-        background: url(../img/iphone.png) no-repeat center 60px;
+        background: url(//qd.myapp.com/myapp/qqteam/TIM_WEB/img/TIM_PC/iphone.png) no-repeat center 60px;
         background-size: auto 100px;
     }
     .android .itemlogo {
-        background: url(../img/android.png) no-repeat center 60px;
+        background: url(//qd.myapp.com/myapp/qqteam/TIM_WEB/img/TIM_PC/android.png) no-repeat center 60px;
         background-size: auto 100px;
     }
     .windows.hover .itemlogo {
-        background: url(../img/windows-hover.png) no-repeat center 60px;
+        background: url(//qd.myapp.com/myapp/qqteam/TIM_WEB/img/TIM_PC/windows-hover.png) no-repeat center 60px;
         background-size: auto 100px;
     }
     .iphone.hover .itemlogo {
-        background: url(../img/iphone-hover2x.png) no-repeat center 60px;
+        background: url(//qd.myapp.com/myapp/qqteam/TIM_WEB/img/TIM_PC/iphone-hover2x.png) no-repeat center 60px;
         background-size: auto 100px;
     }
     .android.hover .itemlogo {
-        background: url(../img/android-hover2x.png) no-repeat center 60px;
+        background: url(//qd.myapp.com/myapp/qqteam/TIM_WEB/img/TIM_PC/android-hover2x.png) no-repeat center 60px;
         background-size: auto 100px;
     }
     .itemlogo {
@@ -308,27 +325,27 @@ body {
         transform: scale(0.95, 0.95)
     }
     .windows .itemlogo {
-        background: url(../img/windows.png) no-repeat center 60px;
+        background: url(//qd.myapp.com/myapp/qqteam/TIM_WEB/img/TIM_PC/windows.png) no-repeat center 60px;
         background-size: auto 114px;
     }
     .iphone .itemlogo {
-        background: url(../img/iphone.png) no-repeat center 60px;
+        background: url(//qd.myapp.com/myapp/qqteam/TIM_WEB/img/TIM_PC/iphone.png) no-repeat center 60px;
         background-size: auto 114px;
     }
     .android .itemlogo {
-        background: url(../img/android.png) no-repeat center 60px;
+        background: url(//qd.myapp.com/myapp/qqteam/TIM_WEB/img/TIM_PC/android.png) no-repeat center 60px;
         background-size: auto 114px;
     }
     .windows.hover .itemlogo {
-        background: url(../img/windows-hover.png) no-repeat center 60px;
+        background: url(//qd.myapp.com/myapp/qqteam/TIM_WEB/img/TIM_PC/windows-hover.png) no-repeat center 60px;
         background-size: auto 114px;
     }
     .iphone.hover .itemlogo {
-        background: url(../img/iphone-hover2x.png) no-repeat center 60px;
+        background: url(//qd.myapp.com/myapp/qqteam/TIM_WEB/img/TIM_PC/iphone-hover2x.png) no-repeat center 60px;
         background-size: auto 114px;
     }
     .android.hover .itemlogo {
-        background: url(../img/android-hover2x.png) no-repeat center 60px;
+        background: url(//qd.myapp.com/myapp/qqteam/TIM_WEB/img/TIM_PC/android-hover2x.png) no-repeat center 60px;
         background-size: auto 114px;
     }
     .itemlogo {
