--- a/xdows安全/css/public.css
+++ b/xdows安全/css/public.css
@@ -75,7 +75,14 @@ a {
     left: 0;
     z-index: 3;
 }
+td {
+  text-align:center;
+  background-color:white
+}
 
+table {
+  background-color:black
+}
 .logo a {
     display: block;
     width: 100%;
