--- a/xdows安全/css/index.css
+++ b/xdows安全/css/index.css
@@ -1,3 +1,17 @@
+.docs-link{
+    height: 100%;
+    line-height: 54px;
+    position: absolute;
+    top: 0;right: 50px;
+}
+.docs-link a{
+    font-size: 18px;
+    color: #fff;
+}
+.scrollTop .docs-link a{
+    color: #333;
+    line-height: 56px;
+}
 .video-bg {
     position: relative
 }
