--- a/Winget-Plus/css/custom.css
+++ b/Winget-Plus/css/custom.css
@@ -6,5 +6,7 @@
     color: #777777;
     font-size: 14px;
     text-align: center
-  font-family: "华康方圆体W7";
+}
+body {
+    font-family: '华康方圆体W7'， sans-serif
 }
