--- a/Winget-Plus/css/style.default.css
+++ b/Winget-Plus/css/style.default.css
@@ -1498,7 +1498,7 @@ h6,
 .h5,
 .h6 {
   margin-bottom: 0.5rem;
-  font-family: inherit;
+  /*font-family: inherit;*/
   font-weight: 800;
   line-height: 1.1;
   color: #2e324a;
